sync iframe and object frame MEW with their reported widths, bug 263050 r/sr=dbaron